@@ -1,3 +1,7 @@
+2006-12-05  Paul Kienzle  <pkienzle@users.sf.net>
+
+	* DLD-FUNCTIONS/rand.cc: Test for Poisson generator with lambda > 1e8.
+
 2006-12-04  David Bateman  <dbateman@free.fr>
 
 	* data.cc (Fdata): If ndims is greater than nargout and
