@@ -1,3 +1,8 @@
+2006-12-05  Paul Kienzle  <pkienzle@users.sf.net>
+
+	* randpoisson.c (oct_fill_randp): For lambda > 1e8, upper limit of
+	loop is n, not L.
+
 2006-11-30  John W. Eaton  <jwe@octave.org>
 
 	* lo-utils.cc (octave_read_double, read_inf_nan_na):
